--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,34 @@
 <html>
     <head>
         <title>Image Uploading</title>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     </head>
     <body>
+	    <h1 align="center" class="container">CAT DETECTOR</h1>
         <form action="/upload_img" method="post" enctype="multipart/form-data">
-            Choose the file: <input type="file" name="photos"/><BR>
+		<div class="input-group">
+  <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+  </div>
+  <div class="custom-file">
+    <input type="file" name="photos" class="custom-file-input" id="inputGroupFile01"
+      aria-describedby="inputGroupFileAddon01" onchange="loadFile(event)">
+    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+  </div>
+		</div></br>
+<img id="output" width="200" />
+            </br>
                 <input type="submit" value="Cat Detector"/>
         </form> 
+	<script>
+var loadFile = function(event) {
+	var image = document.getElementById('output');
+	image.src = URL.createObjectURL(event.target.files[0]);
+};
+</script>
+
     </body>
 </html>
